# cte-hermes-shm

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  README.md  hostfile  hostfile_thallium  preset.sh  readme.md  vcpkg.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: build-containers.yaml  cte-hermes-shm.yml  docs.yml  mac.yml  main.yml  win-bash.yml  win.yml
CMake/: HermesShmCommon.cmake  HermesShmCommonConfig.cmake  HermesShmConfig.cmake
benchmark/: CMakeLists.txt
benchmark/allocator/: CMakeLists.txt  allocator.cc  test_init.cc  test_init.h
benchmark/data_structure/: CMakeLists.txt  atomic.cc  list.cc  lock.cc  queue.cc  ref.cc  string.cc  test_init.cc  test_init.h  unordered_map.cc  vector.cc
benchmark/data_structures/: CMakeLists.txt  list.cc  lock.cc  queue.cc  ref.cc  string.cc  test_init.cc  test_init.h  unordered_map.cc  vector.cc
benchmark/lock/: CMakeLists.txt  benchmark_mutex.cc  test_init.h
cmake/: HermesShmCommonConfig.cmake  HermesShmConfig.cmake
code_generators/: cpp_macro_generator.py
doc/: Doxyfile.in  atomic_types_guide.md  lightbeam_networking_guide.md  singleton_utilities_guide.md
docker/: Dockerfile.build  build.Dockerfile  deploy.Dockerfile  docker.sh  grc-spack.Dockerfile  id_ed25519  id_ed25519.pub  local.Dockerfile  local.sh  release.Dockerfile
docs/: README.md
example/: CMakeLists.txt  allocator.cc  container.cc  list.cc  vector.cc
include/hermes_shm/: hermes_shm.h
include/hermes_shm/constants/: constants.h  data_structure_singleton_macros.h  macros.h  settings.h  settings.h_templ  singleton_macros.h
include/hermes_shm/data_structures/: all.h  data_structure.h  pair.h  string.h
include/hermes_shm/introspect/: system_info.cc  system_info.h
include/hermes_shm/lightbeam/: base_client.h  (+11 more)
scripts/: docker.sh  lint.sh  load_deps.sh  preamble.py  singleton_generator.py
scripts/ci/: coverage.sh  install_deps.sh  install_docs.sh  install_hshm.sh
src/: CMakeLists.txt  data_structure_singleton.cc  memory_intercept.cc  memory_intercept.h  memory_manager.cc  system_info.cc  thread_factory.cc  thread_model_manager.cc
src/lightbeam/: CMakeLists.txt  client.cc  libfabric_client.cc  libfabric_common.cc  libfabric_server.cc  lightbeam.cc  server.cc  transport_factory.cc  types.cc  utils.cc  zmq_client.cc  zmq_server.cc
src/memory/: fixed_page_allocator.cc  malloc_allocator.cc  memory_intercept.cc  memory_intercept.h  memory_manager.cc  memory_registry.cc  multi_page_allocator.cc  page_allocator.cc  scalable_page_allocator.cc  stack_allocator.cc
src/thread/: mutex.cc  rwlock.cc
test/: CMakeLists.txt  README_benchmarks.md  lightbeam_client_test.cc  lightbeam_nonblocking_test.cc  lightbeam_server_test.cc  lightbeam_test.cc  simple_client_test.cc  simple_server_test.cc
test/jarvis_hshm/jarvis_hshm/hshm_alloc_bench/: pkg.py
test/jarvis_hshm/jarvis_hshm/hshm_list_bench/: pkg.py
test/jarvis_hshm/jarvis_hshm/hshm_unit_tests/: pkg.py
test/jarvis_hshm/jarvis_hshm/lightbeam_distributed_test/: pkg.py
test/jarvis_hshm/pipelines/: lightbeam_distributed_test.yaml  multinode-lightbeam.yaml  multinode-lightbeam2.yaml  multinode-lightbeam3.yaml  test_backend_cuda_mpi copy.yaml  test_backend_rocm_mpi.yaml
test/jarvis_lightbeam/: README.md
test/jarvis_lightbeam/jarvis_lightbeam/lightbeam_client/: pkg.py
test/jarvis_lightbeam/jarvis_lightbeam/lightbeam_server/: pkg.py
test/jarvis_lightbeam/pipelines/: env.yaml  lightbeam_pipeline.yaml
test/unit/: CMakeLists.txt  basic_test.h  main.cc  main_mpi.cc
test/unit/allocators/: CMakeLists.txt  allocator.cc  allocator_thread.cc  test_init.cc  test_init.h
test/unit/allocators_mpi/: CMakeLists.txt  allocator_mpi.cc  test_init.cc  test_init.h
test/unit/backend/: CMakeLists.txt  backend.cc  memory_manager.cc  memory_slots.cc
test/unit/compress/: CMakeLists.txt  test_compress.cc
test/unit/cuda/: CMakeLists.txt  backend_cuda.cc  backend_cuda_mpi.cc
test/unit/data_structures/: CMakeLists.txt
test/unit/data_structures/backend/: CMakeLists.txt  backend.cc  memory_manager.cc  memory_slots.cc
test/unit/data_structures/containers/: CMakeLists.txt  chararr.cc  charbuf.cc  charwrap.cc  iqueue.cc  iqueue.h  key_queue.cc  key_set.cc  lifo_list_queue.h  list.cc  list.h  locked_list.cc  manual_ptr.cc  mpmc_queue.cc  mpsc_queue.cc  namespace.cc  pair.cc  pod_array.cc  queue.cc  queue.h  ring_queue.cc  slist.cc  smart_ptr.h  spsc_queue.cc  string.cc  test_init.cc  test_init.h  ticket_queue.cc  tuple.cc  unique_ptr.cc  unordered_map.cc  unordered_map_thread.cc  vector.cc  vector.h
test/unit/data_structures/containers_mpi/: CMakeLists.txt  list_vec_mpi.cc  mpsc_queue.cc  test_init.cc  test_init.h
test/unit/data_structures/lock/: CMakeLists.txt  lock.cc  test_init.cc
test/unit/data_structures/serialize/: CMakeLists.txt
test/unit/data_structures/serialize/cereal/: CMakeLists.txt  test_cereal.cc  test_init.cc  test_init.h
test/unit/data_structures/serialize/shm/: CMakeLists.txt  test_init.cc  test_init.h  test_shm.cc
test/unit/data_structures/serialize/thallium/: CMakeLists.txt  constants.h  server.cc  test_init.cc  test_init.h  test_thallium.cc  test_thallium.sh  thallium.h
test/unit/encrypt/: CMakeLists.txt  test_encrypt.cc
test/unit/interceptor/: CMakeLists.txt  test_interceptor.cc  test_lib.cc  test_lib.h  test_my_lib.cc
test/unit/lightbeam/: CMakeLists.txt  distributed_lightbeam_test.cc  hosts_thallium.txt  hosts_zeromq.txt  lightbeam_transport_test.cc  simple_thallium_test.cc  test_lightbeam_new.cc  zmq_lightbeam_test.cc
test/unit/rocm/: CMakeLists.txt  backend_rocm.cc  backend_rocm_mpi.cc  test_lib.cc  test_lib.h
test/unit/singleton/: CMakeLists.txt  my_lib1.cc  my_lib1.h  my_lib2.cc  my_lib2.h  singleton_lib.cc  singleton_lib.h  test_singleton.cc
test/unit/solvers/: CMakeLists.txt
test/unit/thread/: CMakeLists.txt  test_lock.cc  test_thread.cc
test/unit/types/: CMakeLists.txt  test_argpack.cc  test_atomics.cc  test_random.cc  test_timers.cc  test_util.cc
vscode/: CMakePresets.json
(+203 files in other folders)
